--- a/_sass/_04-components.scss
+++ b/_sass/_04-components.scss
@@ -753,6 +753,11 @@
     width: 100%;
     max-width: 100%;
     box-sizing: border-box;
+    margin: 0;
+    padding: 0.75rem;
+    overflow: hidden;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
   }
 
   // Random halftone decoration
